[project]
# Rename this to your own package once you fork. The import name (below, under
# [tool.setuptools]) is `census_pipeline` by default — change both together.
name = "census-pipeline"
version = "1.0.0"
description = "Phase 1 project — a clean, importable+runnable package for Adult / Census Income. DutchEngineer 'Ship an End-to-End ML Product' track."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Your Name" }]

dependencies = [
    "pandas",
    "scikit-learn",
    "joblib",
]

[project.urls]
Homepage = "https://learn.dutchengineer.org"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
